--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/MyLibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-validator-1.6.jar=C:\\Users\\Pablo\\Documents\\Librerias\\commons-validator-1.6.jar
+file.reference.commons-validator-1.6.jar=C:\\Users\\Pablo Infantes\\Documents\\DAM\\commons-validator-1.6.jar
 file.reference.gson-2.8.1.jar=../../../Downloads/gson-2.8.1.jar
 includes=**
 jar.compress=false
