--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,11 +31,13 @@ endorsed.classpath=
 excludes=
 file.reference.commons-validator-1.6.jar=C:\\Users\\Pablo Infantes\\Documents\\DAM\\commons-validator-1.6.jar
 file.reference.gson-2.8.1.jar=../../../Downloads/gson-2.8.1.jar
+file.reference.itextpdf-5.1.0.jar=C:\\Users\\Pablo Infantes\\Desktop\\Irep\\itextpdf-5.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.8.1.jar}:\
-    ${file.reference.commons-validator-1.6.jar}
+    ${file.reference.commons-validator-1.6.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
